CSE-2: adding literature sources to rule SA1308 documentation

--- a/documentation/SA1308.md
+++ b/documentation/SA1308.md
@@ -27,6 +27,13 @@ By default, StyleCop disallows the use of underscores, *m_*, etc., to mark local
 
 If the field or variable name is intended to match the name of an item associated with Win32 or COM, and thus needs to begin with the prefix, place the field or variable within a special *NativeMethods* class. A NativeMethods class is any class which contains a name ending in NativeMethods, and is intended as a placeholder for Win32 or COM wrappers. StyleCop will ignore this violation if the item is placed within a NativeMethods class.
 
+## Further Sources
+
+<https://blogs.msdn.microsoft.com/brada/2005/01/26/internal-coding-guidelines/> (Section 2.6)  
+<https://blogs.msdn.microsoft.com/rickhos/2004/07/09/variable-names-in-c-part-2/>  
+<https://blogs.msmvps.com/peterritchie/2007/06/17/the-religion-of-class-member-prefixing/>  
+<https://en.wikipedia.org/wiki/Hungarian_notation>
+
 ## How to fix violations
 
 To fix a violation of this rule, remove the prefix from the beginning of the field name, or place the item within a NativeMethods class if appropriate.
